<resources>

    <string name="app_name">LoggerApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_newlog">Create New Log</string>
    <string name="titleText">Title:</string>
    <string name="samplePace">10</string>
    <string name="sampleDescription">Ran around the block twice- this run was difficult!</string>
    <string name="sampleTotalTime">60</string>
    <string name="sampleEndTime">3:00</string>
    <string name="sampleStartTime">2:00</string>
    <string name="sampleDistance">6</string>
    <string name="sampleDate">2/19/2015</string>
    <string name="sampleTitle">My First Run</string>
    <string name="descriptionText">Description/Notes:</string>
    <string name="paceText">Pace:</string>
    <string name="totalTimeText">Total Time:</string>
    <string name="endTimeText">Ending Time:</string>
    <string name="startTimeText">Starting Time:</string>
    <string name="distanceText">Distance:</string>
    <string name="dateText">Date:</string>
    <string name="distanceUnit">miles</string>
    <string name="paceUnit">min/mile</string>
    <string name="totalTimeUnit">minutes</string>
    <string name="newLogMenu">Create New Log</string>
    <string name="realNameApp">Logger</string>

</resources>