<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleText"
            android:id="@+id/titleText"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateText"
            android:id="@+id/dateText"
            android:layout_below="@+id/titleText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distanceText"
            android:id="@+id/distanceText"
            android:layout_below="@+id/dateText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTimeText"
            android:id="@+id/startTimeText"
            android:layout_below="@+id/distanceText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endTimeText"
            android:id="@+id/endTimeText"
            android:layout_below="@+id/startTimeText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalTimeText"
            android:id="@+id/totalTimeText"
            android:layout_below="@+id/endTimeText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paceText"
            android:id="@+id/paceText"
            android:layout_below="@+id/totalTimeText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionText"
            android:id="@+id/descriptionText"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/paceText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sampleTitle"
            android:id="@+id/textView10"
            android:layout_alignTop="@+id/titleText"
            android:layout_toRightOf="@+id/descriptionText"
            android:layout_toEndOf="@+id/descriptionText"
            android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp"
            android:inputType="text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sampleDate"
            android:id="@+id/dateButton"
            android:layout_alignTop="@+id/dateText"
            android:layout_alignLeft="@+id/textView10"
            android:layout_alignStart="@+id/textView10" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sampleDistance"
            android:id="@+id/textView12"
            android:layout_alignTop="@+id/distanceText"
            android:layout_alignLeft="@id/dateButton"
            android:layout_alignStart="@id/dateButton"
            android:inputType="number" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            android:layout_alignTop="@+id/startTimeText"
            android:layout_alignLeft="@+id/textView12"
            android:layout_alignStart="@+id/textView12"
            android:onClick="showStartTimePicker"
            android:layout_above="@+id/textView14"
            android:layout_alignRight="@+id/dateButton"
            android:layout_alignEnd="@+id/dateButton" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sampleEndTime"
            android:id="@+id/textView14"
            android:layout_alignTop="@+id/endTimeText"
            android:layout_alignLeft="@+id/textView13"
            android:layout_alignStart="@+id/textView13"
            android:inputType="time" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sampleTotalTime"
            android:id="@+id/textView15"
            android:layout_alignTop="@+id/totalTimeText"
            android:layout_alignLeft="@+id/textView14"
            android:layout_alignStart="@+id/textView14"
            android:inputType="number" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/samplePace"
            android:id="@+id/textView16"
            android:layout_alignTop="@+id/paceText"
            android:layout_alignLeft="@+id/textView15"
            android:layout_alignStart="@+id/textView15"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sampleDescription"
            android:id="@+id/textView17"
            android:layout_alignTop="@+id/descriptionText"
            android:layout_alignLeft="@+id/textView16"
            android:layout_alignStart="@+id/textView16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distanceUnit"
            android:id="@+id/distanceUnit"
            android:layout_toEndOf="@+id/textView13"
            android:layout_alignTop="@+id/textView12"
            android:layout_toRightOf="@+id/textView12"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paceUnit"
            android:id="@+id/paceUnit"
            android:layout_toEndOf="@+id/textView13"
            android:layout_alignTop="@+id/textView16"
            android:layout_toRightOf="@+id/textView16"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalTimeUnit"
            android:id="@+id/totalTimeUnit"
            android:layout_toEndOf="@+id/textView13"
            android:layout_alignTop="@+id/textView15"
            android:layout_toRightOf="@+id/textView15"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

    </RelativeLayout>